2007-08-03  Ben Motmans <ben.motmans@gmail.com>

	* ConnectionContextService.cs: initialize the correct configFile field

	* Providers/IConnectionProvider.cs, Providers/AbstractConnectionProvider.cs:
	included an out parameter to pass connection errors
	* ConnectionPool/IConnectionPool.cs, ConnectionPool/DefaultConnectionPool.cs,
	ConnectionPool/FakeConnectionPool.cs: added support to store errors that occured
	while creating new connections

2007-08-02  Ben Motmans <ben.motmans@gmail.com>

	* MetaData/ConnectionSettingsMetaData.cs: fixed incorrect field initializer in ctor

	* Collections/ConstraintSchemaCollection.cs: added GetConstraints method to get all
	constraints of a specified type
	* Schema/TriggerSchema.cs, Schema/TriggerFireType.cs: added a property to distinguish
	for each row and for each statement triggers

2007-08-01  Ben Motmans <ben.motmans@gmail.com>

	* Providers/AbstractSchemaProvider.cs, Providers/ISchemaProvider.cs: IsValidName method
	* Configuration/DatabaseConnectionContextCollection.cs: Contains method that can
	look for a specific name
	* Configuration/DatabaseConnectionContext.cs: Refresh event

	* Schema/ViewSchema.cs, Schema/TableSchema.cs: update column parent after clone
	* Schema/ColumnSchema.cs, Schema/DataTypeSchema.cs: store length, scale and precision
	information in the datatype and not in the column
	* Providers/AbstractSchemaProvider.cs, Providers/ISchemaProvider.cs: added methods
	to get the create or alter statements from some schema objects
	* Dialect/AbstractSqlDialect.cs: fixed incorrectly generated sql statements
	* ConnectionPool/IPooledDbConnection.cs, ConnectionPool/AbstractPooledDbConnection.cs:
	Added helper methods to quickly execute sql statements
	* ConnectionContextService.cs: automatically initialize

2007-07-31  Ben Motmans <ben.motmans@gmail.com>

	* QueryService.cs: Added a global method to raise database exceptions
	* Providers/IGuiProvider.cs, IDbFactory.cs: Moved all Gui operations