@@ -139,6 +139,9 @@
     <File name="./MetaData/DatabaseMetaData.cs" subtype="Code" buildaction="Compile" />
     <File name="./Providers/IGuiProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="./Schema/TriggerFireType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Schema/IndexType.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Schema/ForeignKeyAction.cs" subtype="Code" buildaction="Compile" />
+    <File name="./MetaData/IndexMetaData.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
